fix css dark mode and change max-width page

--- a/packages/react-notion-x/styles.css
+++ b/packages/react-notion-x/styles.css
@@ -262,6 +262,8 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+  max-width: 1200px;
+  margin: auto;
 }
 
 .notion-page-scroller {
@@ -589,7 +591,7 @@
 
 .notion-page-icon-hero.notion-page-icon-image .notion-page-icon {
   display: block;
-  border-radius: 3px;
+  border-radius: 50%;
   width: 100%;
   height: 100%;
   max-width: 100%;
@@ -1460,6 +1462,7 @@ svg.notion-page-icon {
 
 .notion-collection-card:hover {
   background: var(--bg-color-0);
+  height: 100%;
 }
 
 .notion-collection-card-cover {
