--- a/styles/custom/notion.scss
+++ b/styles/custom/notion.scss
@@ -540,7 +540,7 @@ body {
     margin-top: 0.5rem;
 
     > a {
-      background-color: var(--notion-card-background-color);
+      // background-color: var(--notion-card-background-color);
       box-shadow: 10px 20px 20px 0 rgb(92 95 112 / 8%);
       width: calc(25% - 30px * 3 / 4);
       margin-bottom: 30px;
